<resources>
    <string name="app_name">Barber Booking App</string>
    <string name="FACEBOOK_APP_ID">425521601566304</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">73f215ef02a8da1bfa4c9292594440a4</string>
    <string name="hint_just_skip">Just Skip</string>
    <string name="hint_login">Login</string>
    <string name="hint_menu_home">Home</string>
    <string name="hint_menu_shopping">Shopping</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_name">Your Name</string>
    <string name="dummy_address">Your Address</string>
    <string name="hint_update">Update</string>
    <string name="home_fragment_title">Home Fragment</string>
    <string name="shopping_fragment_title">Shopping Fragment</string>
    <string name="dummy_client_name">Carlos Andrés</string>
    <string name="dummy_member_type">Normal</string>
    <string name="dummy_card_item_booking">Booking</string>
    <string name="card_item_shopping_cart">Cart</string>
    <string name="card_item_history">History</string>
    <string name="card_item_notify">Notification</string>
    <string name="hint_look_book">Look Book</string>
    <string name="hint_previous">Previous</string>
    <string name="hint_btn_next">Next</string>
    <string name="hint_step_1">STEP 1</string>
    <string name="hint_step_2">STEP 2</string>
    <string name="hint_step_3">STEP 3</string>
    <string name="hint_step_4">STEP 4</string>
    <string name="hint_salon_one">Salon #1</string>
    <string name="Hint_barber_name">Andres</string>
    <string name="dummy_schedule">9:00 - 9:30</string>
    <string name="dummy_availability">Available</string>
    <string name="Available">hint_Available</string>
    <string name="full">Full</string>
    <string name="thank_you_message">Thank you for booking our services!</string>
    <string name="hint_booking_information">Booking Information</string>
    <string name="dummy_booking_time">10h00 at 28/03/2019</string>
    <string name="dummy_booking_barber">Andres</string>
    <string name="dummy_booking_salon_website">https://www.yoursite.com</string>
    <string name="dummy_salon_phone">+57 314-345968</string>
    <string name="dummy_salon_open_hours">9h00 - 19h00</string>
    <string name="dummy_salon_address">Address of Salon # 1</string>
    <string name="hint_confirm_booking">CONFIRM</string>
</resources>
