<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_name"
            android:hint="@string/dummy_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_address"
            android:hint="@string/dummy_address"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_update"
        android:text="@string/hint_update"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bellerose"
        android:textSize="@dimen/button_login_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>